# instapy

./: .gitignore  README.md  assignment3.rtf  pyproject.toml  setup.py
in3110_instapy/: cli.py  cython_filters.c  cython_filters.html  cython_filters.py  numba_filters.py  numpy_filters.py  python_filters.py  timing.py
test/: test_cython.py  test_numba.py  test_numpy.py  test_python.py
